# badgestore

./: README.md
.github/workflows/: count_loc.yml  create_backend_image.yml  create_frontend_image.yml  rust_checks.yml
back_end/: .env.template  Cargo.toml  Dockerfile
back_end/src/: main.rs
back_end/src/api/: config.rs  mod.rs  password.rs  provider.rs
back_end/src/api/models/: db.rs  mod.rs  verify_badge.rs  web.rs
back_end/src/api/routes/: badge_get.rs  badge_post.rs  badge_put.rs  helpers.rs  mod.rs
back_end/tests/: password.rs
front_end/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js
front_end/src/: app.css
front_end/src/components/: badge_form.svelte  generated_badge.svelte  generated_preview.svelte  header.svelte  input.svelte  key_preview.svelte  li.svelte  navbar.svelte  preview_badge.svelte
front_end/src/models/: BadgeAuth.ts  BadgeStyle.ts  CreateBadge.ts
front_end/src/routes/: +layout.svelte  +page.svelte
front_end/src/routes/disclaimers/: +page.svelte
front_end/static/: favicon.aseprite
