[package]
name = "badgestore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_with = { version = "2.3.3", features = ["hex"] }
env_logger = "0.10.0"
log = "0.4.18"
dotenvy = "0.15.7"
tokio = { version = "1.26.0", features = ["full"] }
axum = { version = "0.6.18", features = ["macros", "headers"]}
#utoipa = { version = "3.3", features = ["axum_extras", "chrono"] }
#utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
utoipa = { git = "https://github.com/Sh1nku/utoipa.git", branch = "sh1nku/allow-hosting-on-root", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { git = "https://github.com/Sh1nku/utoipa.git", branch = "sh1nku/allow-hosting-on-root", features = ["axum"]}
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "mysql", "chrono", "offline" ] }
chrono = { version = "0.4.26", features = ["serde"] }
hex = "0.4.3"
argon2 = "0.5.0"
regex = "1.8.4"
lazy_static = "1.4.0"
tower-http = { version = "0.4.0", features= ["cors"]}
rsbadges = "1.1.5"