[package]
name = "badgestore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_with = { version = "3.3.0", features = ["hex"] }
env_logger = "0.10.0"
log = "0.4.20"
dotenvy = "0.15.7"
tokio = { version = "1.32.0", features = ["full"] }
axum = { version = "0.6.20", features = ["macros", "headers"]}
#utoipa = { version = "3.3", features = ["axum_extras", "chrono"] }
#utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
utoipa = { git = "https://github.com/Sh1nku/utoipa.git", branch = "sh1nku/allow-hosting-on-root", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { git = "https://github.com/Sh1nku/utoipa.git", branch = "sh1nku/allow-hosting-on-root", features = ["axum"]}
sqlx = { version = "0.7.1", features = [ "runtime-tokio-native-tls", "mysql", "chrono" ] }
chrono = { version = "0.4.30", features = ["serde"] }
hex = "0.4.3"
argon2 = "0.5.2"
regex = "1.9.5"
lazy_static = "1.4.0"
tower-http = { version = "0.4.4", features= ["cors"]}
rsbadges = "1.1.5"

# rsbadges
webpki = "0.22.1"
# native-tls
openssl = "0.10.57"
